fix(sanity): write `sanity` module version number during build

--- a/.babelrc
+++ b/.babelrc
@@ -15,5 +15,9 @@
     "@babel/preset-typescript",
     "@babel/preset-react"
   ],
-  "plugins": ["lodash", "@babel/plugin-proposal-class-properties"]
+  "plugins": [
+    "lodash",
+    "@babel/plugin-proposal-class-properties",
+    ["@rexxars/inline-json-import", {"match": "/sanity/package.json"}]
+  ]
 }
