--- a/packages/sanity/package.json
+++ b/packages/sanity/package.json
@@ -71,7 +71,7 @@
     "exports:check": "../../bin/pkg-utils exports-check",
     "exports:clean": "../../bin/pkg-utils exports-clean",
     "exports:generate": "../../bin/pkg-utils exports-generate",
-    "postbuild": "run-s exports:generate",
+    "postbuild": "run-s exports:generate && run-s write-version",
     "prepublishOnly": "run-s write-version",
     "write-version": "node writeVersion.js",
     "test": "jest",
