--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "bootstrap": "yarn install && yarn build:cli",
     "build": "tsc --build && lerna run --scope '{@sanity/*,sanity}' build",
-    "build:cli": "tsc --build && lerna run --scope '@sanity/{cli,client,core,export,import,mutator,server,types,util}' --scope sanity build",
+    "build:cli": "tsc --build && lerna run --scope '@sanity/{cli,core,export,import,mutator,server,types,util}' --scope sanity build",
     "clean": "lerna run --scope '{@sanity/*,sanity}' clean",
     "check:versions": "node scripts/normalizeDependencyVersions.js",
     "cypress:open": "cypress open --config-file cypress/cypress.json",
