--- a/packages/@sanity/dashboard/package.json
+++ b/packages/@sanity/dashboard/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "@sanity/dashboard",
   "version": "2.30.0",
   "description": "Tool for rendering dashboard widgets",
