chore: add `@sanity/portable-text-editor` to `sanity` tsconfig references

--- a/packages/sanity/tsconfig.lib.json
+++ b/packages/sanity/tsconfig.lib.json
@@ -21,6 +21,7 @@
   "references": [
     {"path": "../@sanity/diff"},
     {"path": "../@sanity/mutator/tsconfig.lib.json"},
+    {"path": "../@sanity/portable-text-editor"},
     {"path": "../@sanity/schema"},
     {"path": "../@sanity/types"},
     {"path": "../@sanity/transaction-collator"},
