fix(build): fix broken project references

--- a/packages/@sanity/cli/tsconfig.json
+++ b/packages/@sanity/cli/tsconfig.json
@@ -11,5 +11,8 @@
     "jsx": "react",
     "resolveJsonModule": true
   },
-  "references": [{"path": "../types"}]
+  "references": [
+    {"path": "../types"},
+    {"path": "../../sanity"}
+  ]
 }
