--- a/packages/sanity/tsconfig.json
+++ b/packages/sanity/tsconfig.json
@@ -17,6 +17,7 @@
     {"path": "../@sanity/portable-text-editor"},
     {"path": "../@sanity/schema"},
     {"path": "../@sanity/types"},
+    {"path": "../@sanity/cli/tsconfig.lib.json"},
     {"path": "../@sanity/transaction-collator"},
     {"path": "../@sanity/util/tsconfig.lib.json"},
     {"path": "../@sanity/validation/tsconfig.lib.json"}
