--- a/package.json
+++ b/package.json
@@ -162,5 +162,9 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --quiet"
+  },
+  "resolutions": {
+    "@types/react": "^17",
+    "**/@types/react": "^17"
   }
 }
