--- a/examples/blog-studio/package.json
+++ b/examples/blog-studio/package.json
@@ -18,13 +18,9 @@
     "blog-studio"
   ],
   "dependencies": {
-    "@sanity/base": "2.30.0",
-    "@sanity/cli": "2.30.0",
-    "@sanity/core": "2.30.0",
-    "@sanity/default-layout": "2.30.0",
-    "@sanity/default-login": "2.30.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sanity": "2.29.3",
     "styled-components": "^5.2.0"
   },
   "bugs": {
@@ -34,6 +30,6 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sanity-io/sanity.git",
-    "directory": "packages/blog-studio"
+    "directory": "examples/blog-studio"
   }
 }
