feat(cli): load @sanity/core in v2 projects, sanity in v3

--- a/packages/sanity/package.json
+++ b/packages/sanity/package.json
@@ -27,6 +27,11 @@
       "require": "./lib/cjs/_exports/_unstable.js",
       "default": "./lib/esm/_exports/_unstable.js"
     },
+    "./_internal": {
+      "source": "./src/_exports/_internal.ts",
+      "require": "./lib/cjs/_exports/_internal.js",
+      "default": "./lib/esm/_exports/_internal.js"
+    },
     "./cli": {
       "source": "./src/_exports/cli.ts",
       "require": "./lib/cjs/_exports/cli.js",
@@ -52,6 +57,9 @@
     "*": {
       "_unstable": [
         "./lib/dts/src/_exports/_unstable.d.ts"
+      ],
+      "_internal": [
+        "./lib/dts/src/_exports/_internal.d.ts"
       ],
       "cli": [
         "./lib/dts/src/_exports/cli.d.ts"
