--- a/packages/create-sanity/package.json
+++ b/packages/create-sanity/package.json
@@ -21,8 +21,7 @@
   "homepage": "https://www.sanity.io/",
   "license": "MIT",
   "dependencies": {
-    "@sanity/cli": "2.30.0",
-    "@sanity/core": "2.30.0"
+    "@sanity/cli": "2.30.0"
   },
   "repository": {
     "type": "git",
