--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "prettier": "prettier '**/*.{ts,js,tsx,jsx}'",
     "prettify": "lerna run clean && yarn prettier --write",
     "publish-dev-preview": "echo '>>> yarn build && lerna publish --pre-dist-tag dev-preview --preid dev-preview ???'",
+    "publish-purple-unicorn": "RELEASE_TAG=purple-unicorn yarn publish-tag",
     "publish-when-v3-is-ready": "yarn build && lerna publish --exact",
     "publish-canary": "RELEASE_TAG=canary yarn publish-tag",
     "publish-current-branch": "RELEASE_TAG=`git rev-parse --abbrev-ref HEAD | sed 's/\\//\\_/g'` yarn publish-tag",
