--- a/packages/@sanity/cli/package.json
+++ b/packages/@sanity/cli/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "build": "run-s build:lib build:pack",
     "build:lib": "../../../bin/pkg-utils transpile --target node --tsconfig tsconfig.lib.json",
-    "build:pack": "echo ok",
+    "build:pack": "node scripts/pack.js",
     "clean": "rimraf bin/sanity-cli.js lib",
     "prepublishOnly": "yarn build",
     "watch": "../../../bin/pkg-utils transpile --target node --tsconfig tsconfig.lib.json --watch",
@@ -55,7 +55,6 @@
     "@types/eventsource": "^1.1.8",
     "@types/inquirer": "^6.0.0",
     "@types/node": "^14.18.9",
-    "@types/split2": "^3.2.1",
     "@types/validate-npm-package-name": "^3.0.3",
     "@types/which": "^2.0.1",
     "boxen": "^4.1.0",
@@ -66,9 +65,9 @@
     "decompress": "^4.2.0",
     "deep-sort-object": "^1.0.1",
     "dotenv": "^10.0.0",
-    "eventsource": "^1.0.6",
+    "esbuild": "^0.14.43",
+    "eventsource": "^2.0.2",
     "execa": "^2.0.0",
-    "gauge": "^4.0.0",
     "get-it": "^5.2.1",
     "get-latest-version": "^3.0.2",
     "git-user-info": "^2.0.3",
@@ -88,9 +87,7 @@
     "rimraf": "^3.0.2",
     "semver": "^7.3.5",
     "semver-compare": "^1.0.0",
-    "split2": "^3.2.2",
     "validate-npm-package-name": "^3.0.0",
-    "webpack": "^4.14.0",
     "which": "^2.0.2",
     "xdg-basedir": "^4.0.0"
   },
