build: add dts scripts

--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   ],
   "scripts": {
     "bootstrap": "yarn install && yarn build:cli",
-    "build": "tsc --build && lerna run --scope '{@sanity/*,sanity}' build",
-    "build:cli": "tsc --build && lerna run --scope '@sanity/{cli,core,export,import,mutator,server,types,util}' --scope sanity build",
+    "build": "yarn build:dts && lerna run --scope '{@sanity/*,sanity}' build",
+    "build:cli": "yarn build:dts && lerna run --scope '@sanity/{cli,core,export,import,mutator,server,types,util}' --scope sanity build",
+    "build:dts": "tsc --build",
     "clean": "lerna run --scope '{@sanity/*,sanity}' clean",
     "check:versions": "node scripts/normalizeDependencyVersions.js",
     "cypress:open": "cypress open --config-file cypress/cypress.json",
@@ -50,6 +51,7 @@
     "postinstall": "husky install",
     "prettier": "prettier '**/*.{ts,js,tsx,jsx}'",
     "prettify": "lerna run clean && yarn prettier --write",
+    "prettify:dts": "prettier --loglevel warn --write packages/@sanity/*/lib/dts && prettier --loglevel warn --write packages/*/lib/dts",
     "publish-dev-preview": "echo '>>> yarn build && lerna publish --pre-dist-tag dev-preview --preid dev-preview ???'",
     "publish-purple-unicorn": "RELEASE_TAG=purple-unicorn yarn publish-tag",
     "publish-when-v3-is-ready": "yarn build && lerna publish --exact",
