chore(groq): mark groq package as internal for now

--- a/packages/groq/package.json
+++ b/packages/groq/package.json
@@ -1,5 +1,6 @@
 {
   "name": "groq",
+  "private": "true",
   "version": "2.29.3",
   "description": "Tagged template literal for Sanity.io GROQ-queries",
   "main": "lib/groq.js",
