--- a/examples/ecommerce-studio/package.json
+++ b/examples/ecommerce-studio/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ecommerce-studio",
   "private": true,
-  "version": "2.30.0",
+  "version": "3.0.0-dev-preview.0",
   "description": "",
   "main": "package.json",
   "author": "Sanity.io <hello@sanity.io>",
@@ -19,13 +19,13 @@
     "ecommerce-studio"
   ],
   "dependencies": {
-    "@sanity/cli": "2.30.0",
+    "@sanity/cli": "^3.0.0-dev-preview.0",
     "@sanity/form-builder": "2.30.0",
     "@sanity/ui": "^0.37.11",
     "react": "17.0.2",
     "react-barcode": "^1.3.2",
     "react-dom": "17.0.2",
-    "sanity": "2.29.3",
+    "sanity": "^3.0.0-dev-preview.0",
     "styled-components": "^5.2.0"
   },
   "bugs": {
