--- a/packages/@sanity/cli/package.json
+++ b/packages/@sanity/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/cli",
-  "version": "2.30.0",
+  "version": "3.0.0-dev-preview.0",
   "description": "Sanity CLI tool for managing Sanity installations, managing plugins, schemas and datasets",
   "source": "src/index.ts",
   "types": "lib/dts/src/index.d.ts",
@@ -48,8 +48,8 @@
     "@rexxars/gitconfiglocal": "^3.0.1",
     "@sanity/client": "^3.3.2",
     "@sanity/generate-help-url": "^3.0.0",
-    "@sanity/types": "2.29.5",
-    "@sanity/util": "2.29.5",
+    "@sanity/types": "^3.0.0-dev-preview.0",
+    "@sanity/util": "^3.0.0-dev-preview.0",
     "@types/configstore": "^5.0.1",
     "@types/decompress": "^4.2.4",
     "@types/eventsource": "^1.1.8",
