--- a/packages/@sanity/diff/package.json
+++ b/packages/@sanity/diff/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/diff",
-  "version": "2.29.3",
+  "version": "3.0.0-dev-preview.0",
   "description": "Generates diffs between documents and primitive types",
   "main": "./lib/index.cjs",
   "module": "./lib/index.js",
