--- a/packages/@sanity/import-cli/package.json
+++ b/packages/@sanity/import-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/import-cli",
-  "version": "2.29.3",
+  "version": "3.0.0-dev-preview.0",
   "description": "CLI tool that imports documents from an ndjson file or URL",
   "main": "lib/sanity-import.js",
   "bin": {
@@ -28,7 +28,7 @@
   ],
   "dependencies": {
     "@sanity/client": "^3.3.2",
-    "@sanity/import": "2.29.3",
+    "@sanity/import": "^3.0.0-dev-preview.0",
     "get-it": "^5.2.1",
     "meow": "^9.0.0",
     "ora": "^5.4.1",
