--- a/packages/@sanity/mutator/package.json
+++ b/packages/@sanity/mutator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/mutator",
-  "version": "2.29.3",
+  "version": "3.0.0-dev-preview.0",
   "description": "A set of models to make it easier to utilize the powerful real time collaborative features of Sanity",
   "main": "./lib/index.cjs",
   "module": "./lib/index.js",
