--- a/packages/@sanity/server/package.json
+++ b/packages/@sanity/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/server",
-  "version": "2.29.5",
+  "version": "3.0.0-dev-preview.0",
   "description": "Webserver dedicated to serving Sanity, allowing a smooth development experience",
   "main": "./lib/index.js",
   "types": "./lib/dts/src/index.d.ts",
@@ -46,15 +46,15 @@
     "vite": "^2.7.2"
   },
   "devDependencies": {
-    "sanity": "2.29.3",
     "get-it": "^5.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "sanity": "^3.0.0-dev-preview.0"
   },
   "peerDependencies": {
-    "sanity": "^2.29.3",
     "react": "^17 || ^18",
-    "react-dom": "^17 || ^18"
+    "react-dom": "^17 || ^18",
+    "sanity": "^2.29.3"
   }
 }
