--- a/packages/@sanity/types/package.json
+++ b/packages/@sanity/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/types",
-  "version": "2.29.5",
+  "version": "3.0.0-dev-preview.0",
   "description": "Type definitions for common Sanity data structures",
   "source": "./src/index.ts",
   "main": "./lib/index.cjs",
