--- a/packages/@sanity/vision/package.json
+++ b/packages/@sanity/vision/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/vision",
-  "version": "2.30.0",
+  "version": "3.0.0-dev-preview.0",
   "description": "React-based data management tool for Sanity projects",
   "main": "./lib/VisionTool.cjs",
   "module": "./lib/VisionTool.js",
@@ -47,15 +47,15 @@
     "react-split-pane": "^0.1.84"
   },
   "devDependencies": {
-    "sanity": "2.29.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sanity": "^3.0.0-dev-preview.0",
     "styled-components": "^5.2.0"
   },
   "peerDependencies": {
-    "sanity": "^2.29.3",
     "react": "^16.9 || ^17 || ^18",
     "react-dom": "^16.9 || ^17 || ^18",
+    "sanity": "^2.29.3",
     "styled-components": "^5.2.0"
   },
   "repository": {
