--- a/packages/sanity/package.json
+++ b/packages/sanity/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sanity",
-  "version": "2.29.3",
+  "version": "3.0.0-dev-preview.0",
   "description": "Sanity is a real-time content infrastructure with a scalable, hosted backend featuring a Graph Oriented Query Language (GROQ), asset pipelines and fast edge caches",
   "author": "Sanity.io <hello@sanity.io>",
   "bugs": {
@@ -93,28 +93,28 @@
     "@rexxars/react-json-inspector": "^7.1.1",
     "@sanity/asset-utils": "^1.2.3",
     "@sanity/bifur-client": "^0.0.8",
-    "@sanity/block-tools": "2.29.3",
-    "@sanity/cli": "2.30.0",
+    "@sanity/block-tools": "^3.0.0-dev-preview.0",
+    "@sanity/cli": "^3.0.0-dev-preview.0",
     "@sanity/client": "^3.3.2",
     "@sanity/color": "^2.1.10",
-    "@sanity/diff": "2.29.3",
+    "@sanity/diff": "^3.0.0-dev-preview.0",
     "@sanity/eventsource": "^3.0.1",
-    "@sanity/export": "2.29.3",
+    "@sanity/export": "^3.0.0-dev-preview.0",
     "@sanity/generate-help-url": "^3.0.0",
     "@sanity/icons": "^1.3.0",
     "@sanity/image-url": "^1.0.1",
-    "@sanity/import": "2.29.3",
+    "@sanity/import": "^3.0.0-dev-preview.0",
     "@sanity/logos": "^1.1.11",
-    "@sanity/mutator": "2.29.3",
-    "@sanity/portable-text-editor": "2.29.8",
-    "@sanity/schema": "2.29.3",
-    "@sanity/server": "2.29.5",
-    "@sanity/transaction-collator": "2.29.3",
-    "@sanity/types": "2.29.5",
+    "@sanity/mutator": "^3.0.0-dev-preview.0",
+    "@sanity/portable-text-editor": "^3.0.0-dev-preview.0",
+    "@sanity/schema": "^3.0.0-dev-preview.0",
+    "@sanity/server": "^3.0.0-dev-preview.0",
+    "@sanity/transaction-collator": "^3.0.0-dev-preview.0",
+    "@sanity/types": "^3.0.0-dev-preview.0",
     "@sanity/ui": "^0.37.11",
-    "@sanity/util": "2.29.5",
+    "@sanity/util": "^3.0.0-dev-preview.0",
     "@sanity/uuid": "^3.0.1",
-    "@sanity/validation": "2.30.0",
+    "@sanity/validation": "^3.0.0-dev-preview.0",
     "@types/is-hotkey": "^0.1.7",
     "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-is": "^17.0.1",
@@ -140,8 +140,8 @@
     "hashlru": "^2.3.0",
     "history": "^4.6.3",
     "is-hotkey": "^0.1.6",
-    "jsdom-global": "^3.0.2",
     "jsdom": "^12.0.0",
+    "jsdom-global": "^3.0.2",
     "json-lexer": "^1.2.0",
     "json-reduce": "^2.0.0",
     "json5": "^1.0.1",
@@ -168,13 +168,13 @@
     "refractor": "^3.6.0",
     "resolve-from": "^5.0.0",
     "rimraf": "^3.0.2",
+    "rxjs": "^6.5.3",
     "rxjs-etc": "^10.6.0",
     "rxjs-exhaustmap-with-trailing": "^1.0.0",
-    "rxjs": "^6.5.3",
     "sanity-diff-patch": "^1.0.9",
     "scroll-into-view-if-needed": "^2.2.29",
-    "semver-compare": "^1.0.0",
     "semver": "^7.3.5",
+    "semver-compare": "^1.0.0",
     "shallow-equals": "^1.0.0",
     "speakingurl": "^14.0.1",
     "tar-fs": "^2.1.1",
@@ -185,8 +185,8 @@
     "@sanity/client": "^3.3.2",
     "@sanity/ui-workshop": "^0.4.3",
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/react": "^11.2.5",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.0.16",
     "@types/history": "^4.7.9",
     "@types/lodash": "^4.14.149",
@@ -196,12 +196,12 @@
     "@types/refractor": "^3.0.0",
     "@types/resolve-from": "^4.0.0",
     "@types/rimraf": "^3.0.2",
-    "@types/semver-compare": "^1.0.1",
     "@types/semver": "^6.2.3",
+    "@types/semver-compare": "^1.0.1",
     "@types/tar-fs": "^2.0.1",
     "prop-types": "^15.6.0",
-    "react-dom": "17.0.2",
     "react": "17.0.2",
+    "react-dom": "17.0.2",
     "rimraf": "^3.0.2",
     "styled-components": "^5.2.0"
   },
