--- a/packages/@sanity/util/package.json
+++ b/packages/@sanity/util/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/util",
-  "version": "3.0.0-dev-preview.0",
+  "version": "3.0.0-dev-preview.5",
   "description": "Utilities shared across projects of Sanity",
   "source": "./src/index.ts",
   "main": "./lib/index.cjs",
@@ -83,7 +83,7 @@
   },
   "homepage": "https://www.sanity.io/",
   "dependencies": {
-    "@sanity/types": "^3.0.0-dev-preview.0",
+    "@sanity/types": "3.0.0-dev-preview.5",
     "get-random-values": "^1.2.2",
     "moment": "^2.19.1"
   },
