--- a/packages/@sanity/vision/package.json
+++ b/packages/@sanity/vision/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/vision",
-  "version": "3.0.0-dev-preview.0",
+  "version": "3.0.0-dev-preview.5",
   "description": "React-based data management tool for Sanity projects",
   "main": "./lib/VisionTool.cjs",
   "module": "./lib/VisionTool.js",
@@ -49,7 +49,7 @@
   "devDependencies": {
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sanity": "^3.0.0-dev-preview.0",
+    "sanity": "3.0.0-dev-preview.5",
     "styled-components": "^5.2.0"
   },
   "peerDependencies": {
