--- a/packages/create-sanity/package.json
+++ b/packages/create-sanity/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-sanity",
-  "version": "3.0.0-dev-preview.0",
+  "version": "3.0.0-dev-preview.5",
   "description": "Initialize a new Sanity project",
   "bin": "index.js",
   "engines": {
@@ -21,7 +21,7 @@
   "homepage": "https://www.sanity.io/",
   "license": "MIT",
   "dependencies": {
-    "@sanity/cli": "^3.0.0-dev-preview.0"
+    "@sanity/cli": "3.0.0-dev-preview.5"
   },
   "repository": {
     "type": "git",
