--- a/packages/sanity/package.json
+++ b/packages/sanity/package.json
@@ -154,7 +154,7 @@
     "oneline": "^1.0.3",
     "open": "^8.4.0",
     "pirates": "^4.0.0",
-    "pluralize": "^7.0.0",
+    "pluralize-esm": "^9.0.2",
     "pretty-ms": "^7.0.1",
     "raf": "^3.4.1",
     "react-copy-to-clipboard": "^5.0.4",
@@ -191,7 +191,6 @@
     "@types/history": "^4.7.9",
     "@types/lodash": "^4.14.149",
     "@types/log-symbols": "^2.0.0",
-    "@types/pluralize": "^0.0.29",
     "@types/raf": "^3.4.0",
     "@types/refractor": "^3.0.0",
     "@types/resolve-from": "^4.0.0",
