--- a/packages/sanity/package.json
+++ b/packages/sanity/package.json
@@ -135,7 +135,7 @@
     "exif-component": "^1.0.1",
     "framer-motion": "^6.2.8",
     "get-it": "^5.2.1",
-    "get-random-values": "^1.2.2",
+    "get-random-values-esm": "^1.0.0",
     "groq-js": "^0.2.0",
     "hashlru": "^2.3.0",
     "history": "^4.6.3",
