build(vercel): fix build command for vercel deployments in v3

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "__wip_smoke-test:cli": "yarn build && yarn publish:tarball && node -r esbuild-register test/smoke-test/cli.ts",
     "type-check": "tsc --build",
     "updated": "lerna updated",
-    "vercel-build": "yarn build:js && (cd dev/test-studio && yarn build -y)",
+    "vercel-build": "yarn build && (cd dev/test-studio && yarn build)",
     "verify-format": "lerna run clean && yarn prettier -c",
     "watch": "lerna run --parallel --scope '{@sanity/*,sanity}' watch"
   },
