--- a/packages/@sanity/cli/package.json
+++ b/packages/@sanity/cli/package.json
@@ -55,6 +55,7 @@
     "@types/eventsource": "^1.1.8",
     "@types/inquirer": "^6.0.0",
     "@types/node": "^14.18.9",
+    "@types/semver-compare": "^1.0.1",
     "@types/validate-npm-package-name": "^3.0.3",
     "@types/which": "^2.0.1",
     "boxen": "^4.1.0",
