--- a/packages/@sanity/server/package.json
+++ b/packages/@sanity/server/package.json
@@ -37,9 +37,11 @@
     "@sanity/generate-help-url": "^3.0.0",
     "@vitejs/plugin-react": "^1.1.3",
     "chalk": "^4.1.2",
+    "chokidar": "^3.5.3",
     "connect-history-api-fallback": "^1.6.0",
     "debug": "^3.2.7",
     "esbuild-register": "^3.3.2",
+    "import-fresh": "^3.3.0",
     "module-alias": "^2.2.2",
     "read-pkg-up": "^7.0.1",
     "resolve-from": "^5.0.0",
