--- a/packages/@sanity/mutator/package.json
+++ b/packages/@sanity/mutator/package.json
@@ -30,16 +30,17 @@
   "author": "Sanity.io <hello@sanity.io>",
   "license": "MIT",
   "dependencies": {
+    "@sanity/uuid": "^3.0.1",
     "@types/diff-match-patch": "^1.0.32",
     "debug": "^3.2.7",
     "diff-match-patch": "^1.0.4",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@sanity/types": "3.0.0-dev-preview.9",
     "@types/debug": "^4.1.5",
     "@types/lodash": "^4.14.149",
-    "rimraf": "^3.0.2",
-    "tap": "^14.6.1"
+    "rimraf": "^3.0.2"
   },
   "repository": {
     "type": "git",
