--- a/packages/@sanity/server/package.json
+++ b/packages/@sanity/server/package.json
@@ -40,6 +40,7 @@
     "chokidar": "^3.5.3",
     "connect-history-api-fallback": "^1.6.0",
     "debug": "^3.2.7",
+    "esbuild": "^0.14.43",
     "esbuild-register": "^3.3.2",
     "import-fresh": "^3.3.0",
     "module-alias": "^2.2.2",
