feat!(transaction-collator): drop unused transaction-collator package
BREAKING CHANGE: the `@sanity/transaction-collator` module is now deprecated, since the
logic it holds does not match the new chunking strategy used by the history timeline in
the desk tool. The module is still available on npm, but should generally not be used.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,7 @@
 {
   "extends": "./tsconfig.settings",
-  "include": [
-    "./babel.config.js",
-    "./dev/aliases.js",
-    "./scripts",
-    "./test"
-  ],
-  "exclude": [
-    "./test/v2-studio"
-  ],
+  "include": ["./babel.config.js", "./dev/aliases.js", "./scripts", "./test"],
+  "exclude": ["./test/v2-studio"],
   "compilerOptions": {
     "allowJs": true,
     "emitDeclarationOnly": true,
@@ -22,7 +15,6 @@
     {"path": "./packages/@sanity/portable-text-editor"},
     {"path": "./packages/@sanity/schema"},
     {"path": "./packages/@sanity/server"},
-    {"path": "./packages/@sanity/transaction-collator"},
     {"path": "./packages/@sanity/types"},
     {"path": "./packages/@sanity/util"},
     {"path": "./packages/@sanity/validation"},
