--- a/packages/sanity/package.json
+++ b/packages/sanity/package.json
@@ -104,6 +104,7 @@
     "@sanity/client": "^3.3.3",
     "@sanity/color": "^2.1.10",
     "@sanity/diff": "3.0.0-dev-preview.12",
+    "@sanity/diff-match-patch": "^0.0.8",
     "@sanity/eventsource": "^3.0.1",
     "@sanity/export": "3.0.0-dev-preview.12",
     "@sanity/generate-help-url": "^3.0.0",
@@ -133,7 +134,6 @@
     "dataloader": "^2.1.0",
     "date-fns": "^2.26.1",
     "debug": "^3.2.7",
-    "diff-match-patch": "^1.0.4",
     "esbuild": "^0.14.43",
     "esbuild-register": "^3.3.2",
     "execa": "^2.0.0",
@@ -176,7 +176,7 @@
     "rxjs": "^6.5.3",
     "rxjs-etc": "^10.6.0",
     "rxjs-exhaustmap-with-trailing": "^1.0.0",
-    "sanity-diff-patch": "^1.0.9",
+    "sanity-diff-patch": "^2.0.2",
     "scroll-into-view-if-needed": "^2.2.29",
     "semver": "^7.3.5",
     "shallow-equals": "^1.0.0",
