feat(vision): upgrade to v3, modernize, upgrade dependencies

--- a/packages/@sanity/vision/tsconfig.json
+++ b/packages/@sanity/vision/tsconfig.json
@@ -7,7 +7,9 @@
     "rootDir": "./",
     "outDir": "./lib/dts/",
     "jsx": "react",
-    "allowJs": true,
-    "checkJs": false
-  }
+    "allowJs": false,
+    "strict": true,
+    "strictNullChecks": true
+  },
+  "references": [{"path": "../types"}, {"path": "../../sanity/tsconfig.lib.json"}]
 }
