--- a/packages/@sanity/vision/package.json
+++ b/packages/@sanity/vision/package.json
@@ -1,22 +1,23 @@
 {
   "name": "@sanity/vision",
   "version": "3.0.0-dev-preview.12",
-  "description": "React-based data management tool for Sanity projects",
-  "main": "./lib/VisionTool.cjs",
-  "module": "./lib/VisionTool.js",
+  "description": "Sanity plugin for running/debugging GROQ-queries against Sanity datasets",
+  "main": "./lib/index.cjs",
+  "module": "./lib/index.js",
   "exports": {
     ".": {
-      "source": "./src/VisionTool.js",
-      "require": "./lib/VisionTool.cjs",
-      "default": "./lib/VisionTool.js"
+      "source": "./src/index.ts",
+      "require": "./lib/index.cjs",
+      "default": "./lib/index.js"
     }
   },
-  "types": "./lib/dts/src/VisionTool.d.ts",
+  "types": "./lib/dts/src/index.d.ts",
   "author": "Sanity.io <hello@sanity.io>",
   "license": "MIT",
   "scripts": {
     "build": "../../../bin/pkg-utils bundle",
     "clean": "rimraf lib",
+    "prebuild": "npm run clean",
     "watch": "../../../bin/pkg-utils bundle --watch"
   },
   "keywords": [
@@ -31,31 +32,37 @@
     "admin"
   ],
   "dependencies": {
+    "@codemirror/autocomplete": "^6.1.0",
+    "@codemirror/commands": "^6.0.1",
+    "@codemirror/lang-javascript": "^6.0.2",
+    "@codemirror/language": "^6.2.1",
+    "@codemirror/search": "^6.0.1",
+    "@codemirror/view": "^6.1.1",
     "@juggle/resize-observer": "^3.3.1",
+    "@lezer/highlight": "^1.0.0",
+    "@rexxars/react-json-inspector": "^8.0.1",
+    "@sanity/color": "^2.1.11",
     "@sanity/icons": "^1.3.0",
     "@sanity/ui": "^0.37.11",
-    "classnames": "^2.2.5",
-    "codemirror": "^5.47.0",
+    "@uiw/react-codemirror": "^4.11.4",
+    "hashlru": "^2.3.0",
     "is-hotkey": "^0.1.6",
     "json5": "^1.0.1",
     "lodash": "^4.17.21",
-    "moment": "^2.19.1",
-    "query-string": "^4.3.2",
-    "react-codemirror2": "^6.0.0",
-    "react-json-view": "^1.21.3",
-    "react-spinner": "^0.2.6",
     "react-split-pane": "^0.1.84"
   },
   "devDependencies": {
+    "@sanity/client": "^3.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "rxjs": "^6.5.3",
     "sanity": "3.0.0-dev-preview.12",
     "styled-components": "^5.2.0"
   },
   "peerDependencies": {
-    "react": "^16.9 || ^17 || ^18",
-    "react-dom": "^16.9 || ^17 || ^18",
-    "sanity": "^2.29.3",
+    "react": "^17 || ^18",
+    "react-dom": "^17 || ^18",
+    "sanity": "3.0.0-dev-preview.12",
     "styled-components": "^5.2.0"
   },
   "repository": {
