--- a/packages/sanity/package.json
+++ b/packages/sanity/package.json
@@ -134,6 +134,7 @@
     "date-fns": "^2.26.1",
     "debug": "^3.2.7",
     "diff-match-patch": "^1.0.4",
+    "esbuild": "^0.14.43",
     "esbuild-register": "^3.3.2",
     "execa": "^2.0.0",
     "exif-component": "^1.0.1",
