--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "yarn build:dts && lerna run --scope '{@sanity/*,sanity}' build",
     "build:cli": "lerna run --scope '@sanity/{cli,export,import,mutator,server,types,util}' --scope sanity build",
     "build:dts": "tsc --build",
-    "clean": "lerna run --scope '{@sanity/*,sanity}' clean",
+    "clean": "lerna run --scope '{@sanity/*,groq,sanity}' clean",
     "clean:deps": "rimraf packages/@sanity/*/node_modules packages/sanity/node_modules node_modules",
     "check:versions": "node scripts/normalizeDependencyVersions.js",
     "cypress:open": "cypress open --config-file cypress/cypress.json",
